Codigo_Fuente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BGN
    CALL
    CBRT
    CM
    COMMENT
    DO
    ELSE
    END
    ENDL
    EQL_DIV
    EQL_MULT
    EQL_SUB
    EQL_SUM
    FLT
    IF
    OBRT
    PCD
    STR

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> declaracion
Rule 3     block -> While
Rule 4     block -> condicional
Rule 5     declaracion -> empty
Rule 6     declaracion -> asignacion ENDST
Rule 7     asignacion -> IDF EQL expresion
Rule 8     asignacion -> asignacion ENDST IDF EQL expresion ENDST
Rule 9     While -> WHL OPRT expresion CPRT OKEY expresion CKEY
Rule 10    expresion -> INT
Rule 11    expresion -> CHR
Rule 12    condicional -> OPRT expresion CPRT OKEY expresion CKEY
Rule 13    condicional -> OPRT expresion CPRT OKEY declaracion CKEY
Rule 14    condicional -> OPRT expresion CPRT OKEY empty CKEY
Rule 15    empty -> <empty>
Rule 16    expresion -> expresion ADD expresion
Rule 17    expresion -> expresion SUBST expresion
Rule 18    expresion -> expresion MULT expresion
Rule 19    expresion -> expresion DIV expresion
Rule 20    expresion -> expresion SML expresion
Rule 21    expresion -> expresion GRT expresion
Rule 22    expresion -> expresion SMLE expresion
Rule 23    expresion -> expresion GRTE expresion
Rule 24    expresion -> expresion EQL expresion
Rule 25    expresion -> expresion DIF expresion
Rule 26    expresion -> IDF SML IDF
Rule 27    expresion -> IDF GRT IDF
Rule 28    expresion -> IDF SMLE IDF
Rule 29    expresion -> IDF GRTE IDF
Rule 30    expresion -> IDF EQL IDF
Rule 31    expresion -> IDF DIF IDF
Rule 32    expresion -> OPRT expresion CPRT SML OPRT expresion CPRT
Rule 33    expresion -> OPRT expresion CPRT GRT OPRT expresion CPRT
Rule 34    expresion -> OPRT expresion CPRT SMLE OPRT expresion CPRT
Rule 35    expresion -> OPRT expresion CPRT GRTE OPRT expresion CPRT
Rule 36    expresion -> OPRT expresion CPRT EQL OPRT expresion CPRT
Rule 37    expresion -> OPRT expresion CPRT DIF OPRT expresion CPRT
Rule 38    expresion -> expresion AND expresion
Rule 39    expresion -> expresion OR expresion
Rule 40    expresion -> expresion NOT expresion
Rule 41    expresion -> OPRT expresion AND expresion CPRT
Rule 42    expresion -> OPRT expresion OR expresion CPRT
Rule 43    expresion -> OPRT expresion NOT expresion CPRT

Terminals, with rules where they appear

ADD                  : 16
AND                  : 38 41
BGN                  : 
CALL                 : 
CBRT                 : 
CHR                  : 11
CKEY                 : 9 12 13 14
CM                   : 
COMMENT              : 
CPRT                 : 9 12 13 14 32 32 33 33 34 34 35 35 36 36 37 37 41 42 43
DIF                  : 25 31 37
DIV                  : 19
DO                   : 
ELSE                 : 
END                  : 
ENDL                 : 
ENDST                : 6 8 8
EQL                  : 7 8 24 30 36
EQL_DIV              : 
EQL_MULT             : 
EQL_SUB              : 
EQL_SUM              : 
FLT                  : 
GRT                  : 21 27 33
GRTE                 : 23 29 35
IDF                  : 7 8 26 26 27 27 28 28 29 29 30 30 31 31
IF                   : 
INT                  : 10
MULT                 : 18
NOT                  : 40 43
OBRT                 : 
OKEY                 : 9 12 13 14
OPRT                 : 9 12 13 14 32 32 33 33 34 34 35 35 36 36 37 37 41 42 43
OR                   : 39 42
PCD                  : 
SML                  : 20 26 32
SMLE                 : 22 28 34
STR                  : 
SUBST                : 17
WHL                  : 9
error                : 

Nonterminals, with rules where they appear

While                : 3
asignacion           : 6 8
block                : 1
condicional          : 4
declaracion          : 2 13
empty                : 5 14
expresion            : 7 8 9 9 12 12 13 14 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . declaracion
    (3) block -> . While
    (4) block -> . condicional
    (5) declaracion -> . empty
    (6) declaracion -> . asignacion ENDST
    (9) While -> . WHL OPRT expresion CPRT OKEY expresion CKEY
    (12) condicional -> . OPRT expresion CPRT OKEY expresion CKEY
    (13) condicional -> . OPRT expresion CPRT OKEY declaracion CKEY
    (14) condicional -> . OPRT expresion CPRT OKEY empty CKEY
    (15) empty -> .
    (7) asignacion -> . IDF EQL expresion
    (8) asignacion -> . asignacion ENDST IDF EQL expresion ENDST

    WHL             shift and go to state 8
    OPRT            shift and go to state 9
    $end            reduce using rule 15 (empty -> .)
    IDF             shift and go to state 10

    program                        shift and go to state 1
    block                          shift and go to state 2
    declaracion                    shift and go to state 3
    While                          shift and go to state 4
    condicional                    shift and go to state 5
    empty                          shift and go to state 6
    asignacion                     shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> declaracion .

    $end            reduce using rule 2 (block -> declaracion .)


state 4

    (3) block -> While .

    $end            reduce using rule 3 (block -> While .)


state 5

    (4) block -> condicional .

    $end            reduce using rule 4 (block -> condicional .)


state 6

    (5) declaracion -> empty .

    $end            reduce using rule 5 (declaracion -> empty .)


state 7

    (6) declaracion -> asignacion . ENDST
    (8) asignacion -> asignacion . ENDST IDF EQL expresion ENDST

    ENDST           shift and go to state 11


state 8

    (9) While -> WHL . OPRT expresion CPRT OKEY expresion CKEY

    OPRT            shift and go to state 12


state 9

    (12) condicional -> OPRT . expresion CPRT OKEY expresion CKEY
    (13) condicional -> OPRT . expresion CPRT OKEY declaracion CKEY
    (14) condicional -> OPRT . expresion CPRT OKEY empty CKEY
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 14

state 10

    (7) asignacion -> IDF . EQL expresion

    EQL             shift and go to state 18


state 11

    (6) declaracion -> asignacion ENDST .
    (8) asignacion -> asignacion ENDST . IDF EQL expresion ENDST

    $end            reduce using rule 6 (declaracion -> asignacion ENDST .)
    CKEY            reduce using rule 6 (declaracion -> asignacion ENDST .)
    IDF             shift and go to state 19


state 12

    (9) While -> WHL OPRT . expresion CPRT OKEY expresion CKEY
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 20

state 13

    (32) expresion -> OPRT . expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> OPRT . expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> OPRT . expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> OPRT . expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> OPRT . expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> OPRT . expresion CPRT DIF OPRT expresion CPRT
    (41) expresion -> OPRT . expresion AND expresion CPRT
    (42) expresion -> OPRT . expresion OR expresion CPRT
    (43) expresion -> OPRT . expresion NOT expresion CPRT
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 21

state 14

    (12) condicional -> OPRT expresion . CPRT OKEY expresion CKEY
    (13) condicional -> OPRT expresion . CPRT OKEY declaracion CKEY
    (14) condicional -> OPRT expresion . CPRT OKEY empty CKEY
    (16) expresion -> expresion . ADD expresion
    (17) expresion -> expresion . SUBST expresion
    (18) expresion -> expresion . MULT expresion
    (19) expresion -> expresion . DIV expresion
    (20) expresion -> expresion . SML expresion
    (21) expresion -> expresion . GRT expresion
    (22) expresion -> expresion . SMLE expresion
    (23) expresion -> expresion . GRTE expresion
    (24) expresion -> expresion . EQL expresion
    (25) expresion -> expresion . DIF expresion
    (38) expresion -> expresion . AND expresion
    (39) expresion -> expresion . OR expresion
    (40) expresion -> expresion . NOT expresion

    CPRT            shift and go to state 22
    ADD             shift and go to state 23
    SUBST           shift and go to state 24
    MULT            shift and go to state 25
    DIV             shift and go to state 26
    SML             shift and go to state 27
    GRT             shift and go to state 28
    SMLE            shift and go to state 29
    GRTE            shift and go to state 30
    EQL             shift and go to state 31
    DIF             shift and go to state 32
    AND             shift and go to state 33
    OR              shift and go to state 34
    NOT             shift and go to state 35


state 15

    (10) expresion -> INT .

    CPRT            reduce using rule 10 (expresion -> INT .)
    ADD             reduce using rule 10 (expresion -> INT .)
    SUBST           reduce using rule 10 (expresion -> INT .)
    MULT            reduce using rule 10 (expresion -> INT .)
    DIV             reduce using rule 10 (expresion -> INT .)
    SML             reduce using rule 10 (expresion -> INT .)
    GRT             reduce using rule 10 (expresion -> INT .)
    SMLE            reduce using rule 10 (expresion -> INT .)
    GRTE            reduce using rule 10 (expresion -> INT .)
    EQL             reduce using rule 10 (expresion -> INT .)
    DIF             reduce using rule 10 (expresion -> INT .)
    AND             reduce using rule 10 (expresion -> INT .)
    OR              reduce using rule 10 (expresion -> INT .)
    NOT             reduce using rule 10 (expresion -> INT .)
    ENDST           reduce using rule 10 (expresion -> INT .)
    CKEY            reduce using rule 10 (expresion -> INT .)


state 16

    (11) expresion -> CHR .

    CPRT            reduce using rule 11 (expresion -> CHR .)
    ADD             reduce using rule 11 (expresion -> CHR .)
    SUBST           reduce using rule 11 (expresion -> CHR .)
    MULT            reduce using rule 11 (expresion -> CHR .)
    DIV             reduce using rule 11 (expresion -> CHR .)
    SML             reduce using rule 11 (expresion -> CHR .)
    GRT             reduce using rule 11 (expresion -> CHR .)
    SMLE            reduce using rule 11 (expresion -> CHR .)
    GRTE            reduce using rule 11 (expresion -> CHR .)
    EQL             reduce using rule 11 (expresion -> CHR .)
    DIF             reduce using rule 11 (expresion -> CHR .)
    AND             reduce using rule 11 (expresion -> CHR .)
    OR              reduce using rule 11 (expresion -> CHR .)
    NOT             reduce using rule 11 (expresion -> CHR .)
    ENDST           reduce using rule 11 (expresion -> CHR .)
    CKEY            reduce using rule 11 (expresion -> CHR .)


state 17

    (26) expresion -> IDF . SML IDF
    (27) expresion -> IDF . GRT IDF
    (28) expresion -> IDF . SMLE IDF
    (29) expresion -> IDF . GRTE IDF
    (30) expresion -> IDF . EQL IDF
    (31) expresion -> IDF . DIF IDF

    SML             shift and go to state 36
    GRT             shift and go to state 37
    SMLE            shift and go to state 38
    GRTE            shift and go to state 39
    EQL             shift and go to state 40
    DIF             shift and go to state 41


state 18

    (7) asignacion -> IDF EQL . expresion
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 42

state 19

    (8) asignacion -> asignacion ENDST IDF . EQL expresion ENDST

    EQL             shift and go to state 43


state 20

    (9) While -> WHL OPRT expresion . CPRT OKEY expresion CKEY
    (16) expresion -> expresion . ADD expresion
    (17) expresion -> expresion . SUBST expresion
    (18) expresion -> expresion . MULT expresion
    (19) expresion -> expresion . DIV expresion
    (20) expresion -> expresion . SML expresion
    (21) expresion -> expresion . GRT expresion
    (22) expresion -> expresion . SMLE expresion
    (23) expresion -> expresion . GRTE expresion
    (24) expresion -> expresion . EQL expresion
    (25) expresion -> expresion . DIF expresion
    (38) expresion -> expresion . AND expresion
    (39) expresion -> expresion . OR expresion
    (40) expresion -> expresion . NOT expresion

    CPRT            shift and go to state 44
    ADD             shift and go to state 23
    SUBST           shift and go to state 24
    MULT            shift and go to state 25
    DIV             shift and go to state 26
    SML             shift and go to state 27
    GRT             shift and go to state 28
    SMLE            shift and go to state 29
    GRTE            shift and go to state 30
    EQL             shift and go to state 31
    DIF             shift and go to state 32
    AND             shift and go to state 33
    OR              shift and go to state 34
    NOT             shift and go to state 35


state 21

    (32) expresion -> OPRT expresion . CPRT SML OPRT expresion CPRT
    (33) expresion -> OPRT expresion . CPRT GRT OPRT expresion CPRT
    (34) expresion -> OPRT expresion . CPRT SMLE OPRT expresion CPRT
    (35) expresion -> OPRT expresion . CPRT GRTE OPRT expresion CPRT
    (36) expresion -> OPRT expresion . CPRT EQL OPRT expresion CPRT
    (37) expresion -> OPRT expresion . CPRT DIF OPRT expresion CPRT
    (41) expresion -> OPRT expresion . AND expresion CPRT
    (42) expresion -> OPRT expresion . OR expresion CPRT
    (43) expresion -> OPRT expresion . NOT expresion CPRT
    (16) expresion -> expresion . ADD expresion
    (17) expresion -> expresion . SUBST expresion
    (18) expresion -> expresion . MULT expresion
    (19) expresion -> expresion . DIV expresion
    (20) expresion -> expresion . SML expresion
    (21) expresion -> expresion . GRT expresion
    (22) expresion -> expresion . SMLE expresion
    (23) expresion -> expresion . GRTE expresion
    (24) expresion -> expresion . EQL expresion
    (25) expresion -> expresion . DIF expresion
    (38) expresion -> expresion . AND expresion
    (39) expresion -> expresion . OR expresion
    (40) expresion -> expresion . NOT expresion

    CPRT            shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    NOT             shift and go to state 48
    ADD             shift and go to state 23
    SUBST           shift and go to state 24
    MULT            shift and go to state 25
    DIV             shift and go to state 26
    SML             shift and go to state 27
    GRT             shift and go to state 28
    SMLE            shift and go to state 29
    GRTE            shift and go to state 30
    EQL             shift and go to state 31
    DIF             shift and go to state 32


state 22

    (12) condicional -> OPRT expresion CPRT . OKEY expresion CKEY
    (13) condicional -> OPRT expresion CPRT . OKEY declaracion CKEY
    (14) condicional -> OPRT expresion CPRT . OKEY empty CKEY

    OKEY            shift and go to state 49


state 23

    (16) expresion -> expresion ADD . expresion
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 50

state 24

    (17) expresion -> expresion SUBST . expresion
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 51

state 25

    (18) expresion -> expresion MULT . expresion
    (10) expresion -> . INT
    (11) expresion -> . CHR
    (16) expresion -> . expresion ADD expresion
    (17) expresion -> . expresion SUBST expresion
    (18) expresion -> . expresion MULT expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion SML expresion
    (21) expresion -> . expresion GRT expresion
    (22) expresion -> . expresion SMLE expresion
    (23) expresion -> . expresion GRTE expresion
    (24) expresion -> . expresion EQL expresion
    (25) expresion -> . expresion DIF expresion
    (26) expresion -> . IDF SML IDF
    (27) expresion -> . IDF GRT IDF
    (28) expresion -> . IDF SMLE IDF
    (29) expresion -> . IDF GRTE IDF
    (30) expresion -> . IDF EQL IDF
    (31) expresion -> . IDF DIF IDF
    (32) expresion -> . OPRT expresion CPRT SML OPRT expresion CPRT
    (33) expresion -> . OPRT expresion CPRT GRT OPRT expresion CPRT
    (34) expresion -> . OPRT expresion CPRT SMLE OPRT expresion CPRT
    (35) expresion -> . OPRT expresion CPRT GRTE OPRT expresion CPRT
    (36) expresion -> . OPRT expresion CPRT EQL OPRT expresion CPRT
    (37) expresion -> . OPRT expresion CPRT DIF OPRT expresion CPRT
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion NOT expresion
    (41) expresion -> . OPRT expresion AND expresion CPRT
    (42) expresion -> . OPRT expresion OR expresion CPRT
    (43) expresion -> . OPRT expresion NOT expresion CPRT

    INT             shift and go to state 15
    CHR             shift and go to state 16
    IDF             shift and go to state 17
    OPRT            shift and go to state 13

    expresion                      shift and go to state 52

state 26
